forgot dom manipulation :(

--- a/index.html
+++ b/index.html
@@ -22,18 +22,22 @@
           alt="planet"
         />
         <div class="card-body">
-          <h5 class="card-title text-align: center"></h5>
-          <p class="card-text offset-2">Recruit 4-5* managers!</p>
-          <div class=" recruitBox offset-3 mb-2">
-            <img src= ""
-            class="card-img-top imgSrc"
-            alt="planet" /> <br />
+          <h5 class="card-title offset-3">Idle Planet</h5>
+          <p class="card-text offset-3">Recruit 4-5* managers!</p>
+          <div class="recruitBox offset-3 mb-2">
+            <img src="" class="card-img-top imgSrc" alt="planet" /> <br />
           </div>
-          <button class="btn btn-primary offset-4">Recruit</button>
+          <button class="btn btn-primary offset-3">Recruit</button>
           <p class="rateNote mb-0">
             Note: Rates are as follows: 75% chance for 4* 25% chance for 5*
           </p>
         </div>
+      </div>
+      <div class="card">
+        <div class="card-body"><div class="card-title inventory">Inventory</div>
+        <ol class="inventoryList">
+        </ol>
+      </div>
       </div>
     </div>
 
