--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
         </div>
       </div>
       <div class="card">
-        <div class="card-body"><div class="card-title inventory">Inventory</div>
-        <ol class="inventoryList">
-        </ol>
-      </div>
+        <div class="card-body">
+          <div class="card-title inventory">Inventory</div>
+          <ol class="inventoryList"></ol>
+          <button class="probButton">Test</button>
+        </div>
       </div>
     </div>
 
